# linear-algebra-engine

./: .gitignore  CMakeLists.txt  LICENSE  LinearAlgebraTasks.sln  LinearAlgebraTasks.vcxproj  LinearAlgebraTasks.vcxproj.filters  Main.cpp  Numerical.sln  Numerical.vcxproj  Numerical.vcxproj.filters  README.md
AlgebraicStructures/: Mat3.hpp  Polynomial.hpp  Polynomial2.hpp  RealCoordinateSpace.hpp
Algorithms/: Interpolation.cpp  Interpolation.hpp  LinearSystems.cpp
Core/: ApplicationStateMachine.cpp  ApplicationStateMachine.hpp  Constants.hpp  InputManager.cpp  InputManager.hpp  Main.cpp  MathStreams.cpp  MathStreams.hpp  Platform.hpp  StateMachine.cpp  StateMachine.hpp  View.cpp  View.hpp
Engine/: CommonFunctions.hpp  Constants.hpp  MathStreams.hpp
Input/: GS4.txt  LS2.txt  input.txt  randomInput.txt  testinput.txt
Input/Tests/: LU1.txt  (+3 more)
app/: ApplicationInputManager.hpp  ApplicationState.cpp  ApplicationStateMachine.cpp  ApplicationStateMachine.hpp  CMakeLists.txt  ConsoleAppMain.cpp  Platform.hpp
src/: CMakeLists.txt  Constants.hpp  MathStreams.cpp  MathStreams.hpp  PlaygroundMain.cpp
src/AlgebraicStructures/: Mat3.hpp  Polynomial.hpp  Polynomial2.hpp  RealCoordinateSpace.hpp  Surface.hpp
src/Algorithms/: GramSchmidt.hpp  Interpolation.cpp  Interpolation.hpp  LinearSystems.cpp  LinearSystems.hpp
src/Core/: MathStreams.hpp  Platform.hpp
src/Core/ConsoleApp/: ApplicationState.cpp
test/: CMakeLists.txt  Main.cpp  Tester.cpp  Tester.hpp  TesterMain.cpp
test/Algorithms/: InterpolationTests.cpp  InterpolationTests.hpp  LinearSystemsTests.cpp  LinearSystemsTests.hpp
test/input/Tests/: Cholesky1.txt  Cholesky2.txt  Cholesky3.txt  GramSchmidtR4.txt  k210Az1.txt
test/input/Tests/Solutions/: DistanceFromSubspaceMat3.txt
tests/: CMakeLists.txt
(+29 files in other folders)
